continue ouija board implementation  - properly calculate enchantment cost from item  - deduct correct level cost from player  - allow inserting already enchanted items, raises cost  - only allow curses that can apply to the item being cursed